--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/olive89aja/mongoscrap/issues"
   },
-  "homepage": "https://github.com/olive89aja/mongoscrap#readme"
+  "homepage": "https://github.com/olive89aja/mongoscrap#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "expres": "0.0.5",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mongoose": "^5.7.12",
+    "morgan": "^1.9.1"
+  }
 }
