--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "request": "^2.88.0"
   }
 }
